--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.vincenzopalazzo</groupId>
+            <artifactId>material-ui-swing</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
